[package]
name = "rcc"
version = "0.1.0"
edition = "2021"
description = "A simple C compiler written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5.3", features = ["derive"] }
